# DungeonOfTheSkeletons

./: .gitignore  CMakeLists.txt  README.md  index.html  index.js  index.wasm
.claude/: launch.json
shell/: shell.html
src/: AssetManager.h  Enemies.h  Entity.h  Game.cpp  Game.h  Level.h  Level1.cpp  Level1.h  Level2.cpp  Level2.h  Player.h  main.cpp
src/compat/: sfml_compat.h
